# generals-io-glhf

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
example/: algorithm.py  app_example.py  bot_tutorial.py  how_to_use_signal.py  main.py  optimal_opening.py  optimal_opening_paths.py  tutorial.ipynb  tutorial.py
glhf/: base.py  bot.py  gui.py  helper.py  server.py  typing_.py
src/glhf/: __init__.py  __main__.py  app.py  base.py  bot.py  cli.py  client.py  gui.py  helper.py  server.py  typing.py  typing_.py  utils.py
src/glhf/gui/: __init__.py  _pygame.py
src/glhf/gui/_pygame/: __init__.py  render.py  states.py
src/glhf/gui/_resource/: __init__.py
src/glhf/server/: __init__.py  _local.py  _socketio.py
src/glhf/utils/: __init__.py  maps.py  methods.py  methods.pyi
