[build-system]
requires = ["setuptools>=69.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "glhf"
version = "0.0.1.dev6"
dependencies = [
    "fire>=0.7.0",
    "igraph>=0.11.6",
    "ortools>=9.11.4210",
    "pygame-ce>=2.5.1",
    "python-socketio[asyncio-client]>=5.11.4",
    "rich>=13.9.1",
]
requires-python = ">= 3.12"
authors = [{ name = "Hong-Chang Huang", email = "seer852741@gmail.com" }]
description = "Good luck, have fun! A generals.io bot framework."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Topic :: Software Development :: Libraries",
  "Topic :: Games/Entertainment :: Real Time Strategy",
  "Topic :: Games/Entertainment :: Simulation",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.package-data]
"glhf.gui._resource" = ["*"]
